Bunch of little bugs squashed. Issue submission no longer has that moment before switching tabs. Dropdown buttons now have text on them at larger screen sizes. Null checks on add_series.

--- a/modules/single_comic/_single_comic.scss
+++ b/modules/single_comic/_single_comic.scss
@@ -10,8 +10,6 @@
   }
 
   .issue-story {
-    margin-top: 15px;
-    
     h4 {
       margin-top: 0
     }
